; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_cmdline.c_svn_cmdline_fflush.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_cmdline.c_svn_cmdline_fflush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EOF = common dso_local global i64 0, align 8
@SVN_ERR_IO_PIPE_WRITE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"Write error\00", align 1
@SVN_ERR_IO_WRITE_ERROR = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_cmdline_fflush(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 0, i64* @errno, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @fflush(i32* %4)
  %6 = load i64, i64* @EOF, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %25

8:                                                ; preds = %1
  %9 = call i64 (...) @apr_get_os_error()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %8
  %12 = call i64 (...) @apr_get_os_error()
  %13 = call i64 @SVN__APR_STATUS_IS_EPIPE(i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %11
  %16 = load i32, i32* @SVN_ERR_IO_PIPE_WRITE_ERROR, align 4
  %17 = call i32* @svn_error_create(i32 %16, i32* null, i32* null)
  store i32* %17, i32** %2, align 8
  br label %27

18:                                               ; preds = %11
  %19 = call i64 (...) @apr_get_os_error()
  %20 = call i32 @_(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %21 = call i32* @svn_error_wrap_apr(i64 %19, i32 %20)
  store i32* %21, i32** %2, align 8
  br label %27

22:                                               ; preds = %8
  %23 = load i32, i32* @SVN_ERR_IO_WRITE_ERROR, align 4
  %24 = call i32* @svn_error_create(i32 %23, i32* null, i32* null)
  store i32* %24, i32** %2, align 8
  br label %27

25:                                               ; preds = %1
  %26 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %26, i32** %2, align 8
  br label %27

27:                                               ; preds = %25, %22, %18, %15
  %28 = load i32*, i32** %2, align 8
  ret i32* %28
}

declare dso_local i64 @fflush(i32*) #1

declare dso_local i64 @apr_get_os_error(...) #1

declare dso_local i64 @SVN__APR_STATUS_IS_EPIPE(i64) #1

declare dso_local i32* @svn_error_create(i32, i32*, i32*) #1

declare dso_local i32* @svn_error_wrap_apr(i64, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
